fix: made by the community banner on mobile not full width (WEB-37) #76

--- a/src/app/components/heroSection/heroSection.module.css
+++ b/src/app/components/heroSection/heroSection.module.css
@@ -66,7 +66,7 @@
   .heroSection {
     flex-direction: row;
     padding: 0 1rem 0 0;
-    margin: 4rem -10px 15px 15px;
+    margin: 4rem 15px 15px;
     background-image: url('/assets/dsdMobileHeroBg.png');
     background-size: 65%;
   }
